# so

./: LICENSE  so.cabal  stack.yaml
src/2017/: SoJson.hs  SoLog.hs  so-log.txt
