name:                so
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arthurvard/so#readme
license:             BSD3
license-file:        LICENSE
author:              Arthur
maintainer:          artie.vard@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable so
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 1.0.2.1,
                       aeson >= 1.0.2.1,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       text >= 1.2.2.1,
                       transformers >= 0.5.2.0
                     , email-validate >= 2.2.0
